update link to hdf5 intro

--- a/2_GWAS.ipynb
+++ b/2_GWAS.ipynb
@@ -179,7 +179,7 @@
     "\n",
     "The 'positions' dataset is also associated with a small file called an attribute which provides information about the chromosome location ('chr_index').  We will use the attribute later when outputting GWAS results.\n",
     "\n",
-    "(If you are interested in learning more about how to use hdf5 files, check out https://www.pythonforthelab.com/blog/how-to-use-hdf5-files-in-python/ after class for a more detailed introduction.)\n"
+    "(If you are interested in learning more about how to use hdf5 files, check out https://docs.h5py.org/en/stable/quick.html after class for a more detailed introduction.)\n"
    ]
   },
   {
